# aim-frontend

./: dashboard.html  pyproject.toml  server.py
aim_central/view/: flask_gui.py
