[project]
name = "aim-frontend"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Ethan Ostroff", email = "ostroff.e@northeastern.edu"},
]
dependencies = ["flask>=3.1.3"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
start = {cmd = ["python", "-m", "aim_central.main"]}
setup-env = {cmd = ["python", "scripts/setup_env.py"]}
